# moira

./: .gitignore  Cargo.toml  README.md
examples/: ballad.json  wtc_1_1_fugue.json
src/: chord.rs  json_input.rs  key.rs  main.rs  scale.rs  track.rs
