[package]
name = "moira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
indexmap = "2.2.6"
log = "0.4.21"
midly = "0.5.3"
regex = "1.10.4"
serde = "1.0.197"
serde_json = { version = "1.0.115", features = ["preserve_order"] }
